# hyplex

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  submit.sh
input/: dens_n_256_64.csv  dens_n_512_128.csv
input/config/: config-benchmark.yaml  config-benchmark_A.yaml  config-benchmark_B.yaml  config-benchmark_C.yaml  config-benchmark_D.yaml  config-dc-p0.yaml  config-dc-p20.yaml  config-dc-p40-large.yaml  config-dc-p40.yaml  config-dc-p60.yaml  config-dc-p80.yaml  config-dc-p90.yaml  config-dc-p95-rec.yaml  config-dc-p95.yaml  config-dc-restart.yaml  config-dc-short.yaml  config-dc.yaml  config-dsmc-20.yaml  config-dsmc-40.yaml  config-dsmc-60.yaml  config-dsmc-80-no-col.yaml  config-dsmc-80-restart.yaml  config-dsmc-80.yaml  config-dsmc-pump.yaml  config-e1-a1.yaml  config-e1-a2.yaml  config-e1-a4.yaml  config-e1-a5.yaml  config-e2-f10.yaml  config-e2-f15.yaml  config-e2-f20.yaml  config-e2-f25.yaml  config-e2-f35.yaml  config-e2-f40-r.yaml  config-e2-f40.yaml  config-e2-f45.yaml  config-e2-f5.yaml  config-e2-f50.yaml  config-e2-f55.yaml  config-e3-c10.yaml  (+18 more)
lib/: args.h  npy.h
output/: anim.py  load_output.py  load_state.py  plot.py  plot_dens.py  plot_dens_av_diff.py  plot_dens_axial.py  plot_dens_n.py  plot_dens_radial_profile.py  plot_fluxx_n.py  plot_ke.py  plot_phi.py  plot_phi_axial.py  plot_phi_axial_theory.py
src/: arg-parser.h  clock.h  config-class.cpp  config-class.h  config.cpp  config.h  configuration.cpp  configuration.h  cross-sections.cpp  cross-sections.h  diagnostics.cpp  diagnostics.h  dsmc.cpp  dsmc.h  exdir.h  fields.cpp  fields.h  fmath.h  fmatrix.h  h5io.cpp  h5io.h  input-output.cpp  input-output.h  main.cpp  mcc.cpp  mcc.h  npy.h  num-tools.cpp  num-tools.h  particles-in-mesh.cpp  particles-in-mesh.h  particles.cpp  particles.h  random-numbers.cpp  random-numbers.h  rsolver.cpp  rsolver.h  simulation.cpp  simulation.h  state-info.h  (+2 more)
src/config/: config-b1.ini  config-b2.ini  config.ini
util/: cases.py  compare_config.py  ctxt.py  load_output.py  outdb.py  plasma.py  run_cases.py  send.sh  submit.sh
util/config/: config_0.yaml
